--- a/sites/all/themes/zen_PsychIntern/sass/_normalize.scss
+++ b/sites/all/themes/zen_PsychIntern/sass/_normalize.scss
@@ -19,13 +19,13 @@
  * HTML5 display definitions
  */
  
-/* @font-face {
+ @font-face {
     font-family: 'humnst777_lt_btlight';
-    src: url('fonts/hum777l-webfont.eot');
-    src: url('fonts/hum777l-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/hum777l-webfont.woff') format('woff'),
-         url('fonts/hum777l-webfont.ttf') format('truetype'),
-         url('fonts/hum777l-webfont.svg#humnst777_lt_btlight') format('svg');
+    src: url('../fonts/hum777l-webfont.eot');
+    src: url('../fonts/hum777l-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/hum777l-webfont.woff') format('woff'),
+         url('../fonts/hum777l-webfont.ttf') format('truetype'),
+         url('../fonts/hum777l-webfont.svg#humnst777_lt_btlight') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -33,22 +33,22 @@
 
 @font-face {
     font-family: 'humnst777_lt_btlight_italic';
-    src: url('fonts/hum777li-webfont.eot');
-    src: url('fonts/hum777li-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/hum777li-webfont.woff') format('woff'),
-         url('fonts/hum777li-webfont.ttf') format('truetype'),
-         url('fonts/hum777li-webfont.svg#humnst777_lt_btlight_italic') format('svg');
+    src: url('../fonts/hum777li-webfont.eot');
+    src: url('../fonts/hum777li-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/hum777li-webfont.woff') format('woff'),
+         url('../fonts/hum777li-webfont.ttf') format('truetype'),
+         url('../fonts/hum777li-webfont.svg#humnst777_lt_btlight_italic') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'humnst777_cn_btregular';
-    src: url('fonts/tt1159m-webfont.eot');
-    src: url('fonts/tt1159m-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/tt1159m-webfont.woff') format('woff'),
-         url('fonts/tt1159m-webfont.ttf') format('truetype'),
-         url('fonts/tt1159m-webfont.svg#humnst777_cn_btregular') format('svg');
+    src: url('../fonts/tt1159m-webfont.eot');
+    src: url('../fonts/tt1159m-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/tt1159m-webfont.woff') format('woff'),
+         url('../fonts/tt1159m-webfont.ttf') format('truetype'),
+         url('../fonts/tt1159m-webfont.svg#humnst777_cn_btregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -59,11 +59,11 @@
 
 @font-face {
     font-family: 'humnst777_cn_btbold';
-    src: url('fonts/tt1160m-webfont.eot');
-    src: url('fonts/tt1160m-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/tt1160m-webfont.woff') format('woff'),
-         url('fonts/tt1160m-webfont.ttf') format('truetype'),
-         url('fonts/tt1160m-webfont.svg#humnst777_cn_btbold') format('svg');
+    src: url('../fonts/tt1160m-webfont.eot');
+    src: url('../fonts/tt1160m-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/tt1160m-webfont.woff') format('woff'),
+         url('../fonts/tt1160m-webfont.ttf') format('truetype'),
+         url('../fonts/tt1160m-webfont.svg#humnst777_cn_btbold') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -74,15 +74,15 @@
 
 @font-face {
     font-family: 'humnst777_blkcn_btblack';
-    src: url('fonts/tt1161m-webfont.eot');
-    src: url('fonts/tt1161m-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/tt1161m-webfont.woff') format('woff'),
-         url('fonts/tt1161m-webfont.ttf') format('truetype'),
-         url('fonts/tt1161m-webfont.svg#humnst777_blkcn_btblack') format('svg');
+    src: url('../fonts/tt1161m-webfont.eot');
+    src: url('../fonts/tt1161m-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/tt1161m-webfont.woff') format('woff'),
+         url('../fonts/tt1161m-webfont.ttf') format('truetype'),
+         url('../fonts/tt1161m-webfont.svg#humnst777_blkcn_btblack') format('svg');
     font-weight: normal;
     font-style: normal;
 
-}*/
+}
 
 /* Correct `block` display not defined in IE 8/9. */
 article,
@@ -194,6 +194,10 @@ body {
   background:#a7c5d9;
 }
 
+
+body.cke_editable{
+	background:#fff!important;
+}
 /**
  * Links
  *
@@ -234,7 +238,7 @@ a:hover {
 /* Set 1 unit of vertical rhythm on the top and bottom margin. */
 p,
 pre {
-  margin: rhythm(1) 0;
+ margin:0 0 16px;
 }
 blockquote {
   /* Also indent the quote on both sides. */
@@ -246,16 +250,14 @@ blockquote {
  * contexts in Firefox 4+, Safari 5, and Chrome.
  */
 h1 {
-	/*font-family: 'humnst777_cn_btbold';*/
 	font-family: 'Open Sans', sans-serif;
-	font-weight:700;
   /* Set the font-size and line-height while keeping a proper vertical rhythm. */
   @include adjust-font-size-to( $h1-font-size );
 
   /* Set 1 unit of vertical rhythm on the top and bottom margins. */
   @include leader(1, $h1-font-size);
   @include trailer(1, $h1-font-size);
-    color:#3168e2;
+    color:#16608F;
 }
 h2 {
   @include adjust-font-size-to( $h2-font-size );
@@ -266,7 +268,7 @@ h2 {
 h3 {
   @include adjust-font-size-to( $h3-font-size );
   @include leader(1, $h3-font-size);
-  @include trailer(1, $h3-font-size);
+  /*@include trailer(1, $h3-font-size);*/
 }
 h4 {
   @include adjust-font-size-to( $h4-font-size );
@@ -301,17 +303,13 @@ dfn {
 }
 
 /* Address differences between Firefox and other browsers. */
-/*hr {
+hr {
   @include box-sizing(content-box);
   height: 0;
   border: 1px solid #666;
   padding-bottom: -1px;
   margin: rhythm(1) 0;
-}*/
-
-
-
-hr { border: 0; height: 1px; background: #333; background-image: -webkit-linear-gradient(left, #ccc, #333, #ccc); background-image: -moz-linear-gradient(left, #ccc, #333, #ccc); background-image: -ms-linear-gradient(left, #ccc, #333, #ccc); background-image: -o-linear-gradient(left, #ccc, #333, #ccc); }
+}
 
 /* Address styling not present in IE 8/9. */
 mark {
