--- a/sites/all/themes/zen_PsychIntern/sass/layouts/_responsive.scss
+++ b/sites/all/themes/zen_PsychIntern/sass/layouts/_responsive.scss
@@ -53,6 +53,19 @@ $zen-auto-include-item-base: false;
 
 #content{
 	margin-top:16px;
+	
+	.view-site-descriptions{
+		h2.field-content{
+			a:link, a:visited, a:active{
+				text-decoration:none;
+				color:#666;
+				&:hover{
+					text-decoration:underline;
+					color:#000;
+				}
+			}
+		}
+	}
 }
 
 #footer{
@@ -112,23 +125,21 @@ $zen-auto-include-item-base: false;
 	background:#ffffff url(../images/phone-banner-bg.png) 0 0 no-repeat;
 	
   .header{
+	  position:relative;
+	  height:113px;
 				.header__name-and-slogan {
-					position:relative;
-					top:0;
-					left:0;
-					.header__site-name{
-						line-height:1em;
-						a{
-							color:#000;
-							text-decoration:none;
-							span{
-								/*font-family: 'humnst777_cn_btbold';*/
-								font-family: 'open sans';
-							}
-					}
+					position:absolute;
+					top:25px;
+					left:12px;
+					
+					a{
+						text-decoration:none;
+						span{
+							font-family: 'humnst777_cn_btbold';
+						}
 					}
 				}
-		.right-logo{
+		.header__logo{
 			display:none;
 		}
 		}//end header
@@ -169,23 +180,16 @@ $zen-auto-include-item-base: false;
 		#main{
 			#content{
 				
-				.hideme{
-					display:block!important;
-				}
-
+				margin-top:0;
 	
 				h1{
 					line-height:1.1em;
-					font-size:1.4em;
-					margin-top:20px;
-				}
-				
-				h2{
-					margin-top:0;
+					font-size:1.5em;
+					margin-top:8px;
 				}
 				
 				article{
-					margin-top:10px;
+					margin-top:30px;
 				}
 
 				p{
@@ -201,16 +205,15 @@ $zen-auto-include-item-base: false;
 			}
 			
 			}//end main
-			
+				.search-box{
+		display:none;
+			}
 		}//end page
  }
   /*480 to 760px*/
  @media all and (min-width: 480px) and (max-width: 759px) {
 	 
 	 #page{
-		 .hideme{
-					display:block;
-				}
 	#header{
 		background:url(../images/CO-PIC-banner960.png) 0 0 no-repeat;
 		height:154px;
@@ -218,11 +221,12 @@ $zen-auto-include-item-base: false;
 		
 /* Wrapper for website name and slogan. */
 .header__name-and-slogan {
-  position: absolute;
-  top:108px;
-  left:150px;
+    position: absolute;
+    top:50px;
+    left:20px;
+	width:400px;
+	
   h1.site-name, a.header__site-link{
-	  font-weight:100;
 	  letter-spacing:1px;
 	  font-size:1em;
   }
@@ -248,6 +252,10 @@ $zen-auto-include-item-base: false;
 		#phone-nav, .nav-toggle{
 			display:none;
 		}
+		 
+	.search-box{
+		display:none;
+			}
 	
 }//end page  
 			
@@ -259,9 +267,6 @@ $zen-auto-include-item-base: false;
   $zen-column-count: 3;
 
 #page{
-		.hideme{
-			display:none;
-			}
 	#header{
 		background:url(../images/CO-PIC-banner960.png) 0 0 no-repeat;
 		height:154px;
@@ -270,28 +275,18 @@ $zen-auto-include-item-base: false;
 /* Wrapper for website name and slogan. */
 .header__name-and-slogan {
   position: absolute;
-  top:80px;
-  left:40px;
+  top:30px;
   h1.site-name, a.header__site-link{
-	    color: #7a7b7e;
-    font-family: "Open Sans",sans-serif;
-    font-size: .8em;
-    font-weight: 700;
-    text-transform: uppercase;
-	text-decoration:none;
+	  color: #231f20;
+     font-family: "Open Sans",sans-serif;
+     font-size: 1em;
+     font-weight: 700;
+     letter-spacing: 1px;
+     text-transform: uppercase;
   }
 }
-		
-		.right-logo{
-			position:absolute;
-			right:35px;
-			top:2px;
-			
-			img{
-				width:100%;
-				max-width:125px;
-				max-height:114px; 
-			}
+		.header__logo{
+			display:none;
 		}
 	}
 	
@@ -302,19 +297,23 @@ $zen-auto-include-item-base: false;
 			margin:8px 0;
 			border-bottom:2px solid #ccc;
 			
-				.search-box{
-					display:none;
-			}
-			
 			#phone-nav, .nav-toggle{
 			display:none;
 		}
 	}
 	
+.search-box{
+	position:absolute;
+	right:30px;
+	top:90px;
+} 
+	
 }//end page  
   #phone-nav{
 	  display:none;
   }
+	
+
 
   /**
    * The layout when there is only one sidebar, the left one.
@@ -323,6 +322,10 @@ $zen-auto-include-item-base: false;
     /* Span 2 columns, starting in 2nd column from left. */
     #content {
       @include zen-grid-item(2, 2);
+	  
+	  .hideme{
+				  display:none;
+			  }
     }
 
     /* Span 1 column, starting in 1st column from left. */
@@ -338,6 +341,9 @@ $zen-auto-include-item-base: false;
     /* Span 2 columns, starting in 1st column from left. */
     #content {
       @include zen-grid-item(2, 1);
+	  .hideme{
+				  display:none;
+			  }
     }
 
     /* Span 1 column, starting in 3rd column from left. */
@@ -353,6 +359,9 @@ $zen-auto-include-item-base: false;
     /* Span 2 columns, starting in 2nd column from left. */
     #content {
       @include zen-grid-item(2, 2);
+	  .hideme{
+				  display:none;
+			  }
     }
 
     /* Span 1 column, starting in 1st column from left. */
@@ -395,31 +404,25 @@ $zen-auto-include-item-base: false;
   $zen-column-count: 5;
 
 #page{
-	
 	#header{
 		background:url(../images/CO-PIC-banner.png) 0 0 no-repeat;
 		height:192px;
 		position:relative;
 		
 		/* Wrapper for website name and slogan. */
-			#name-and-slogan {
+			.header__name-and-slogan {
 			  position: absolute;
-				  top:65px;
-				  left:120px;
-				   width:50%;
-					  h1#site-name{
-						  a.header__site-link{
-							  /*font-family: 'humnst777_cn_btbold';*/
-							  font-family: 'Open Sans', sans-serif;
-							  color:#7a7b7e;
-							  font-weight:700;
-							  letter-spacing:1px;
-							  text-transform:uppercase;
-							  font-size:1.3em;
-							  line-height:1em!important;
-							  text-decoration:none;
-						  }
-					  }
+			  top:70px;
+			  left:50px;
+			  width:550px;
+			  h1.site-name, a.header__site-link{
+				  font-family: 'Open Sans', sans-serif;
+				  color:rgba(35,31,32,1.00);
+				  font-weight:700;
+				  letter-spacing:1px;
+				  text-transform:uppercase;
+				  font-size:1.3em;
+			  }
 			}
 
 		
@@ -453,6 +456,13 @@ $zen-auto-include-item-base: false;
 	#phone-nav, .nav-toggle{
 		display:none;
 	}
+	
+	.search-box{
+		position:absolute;
+		right:30px;
+		top:135px;
+	} 
+	
 }//end page
 
 
@@ -467,10 +477,36 @@ $zen-auto-include-item-base: false;
       @include zen-grid-item(4, 2);
 	  border-left:1px solid #ccc;
 	  padding-left:16px;
-	  padding-bottom:16px;
-	  .hideme{
-			display:none;
-			}
+	  
+	  p{
+		  margin-top:0;
+	  }
+	  
+	  
+	  
+			  .hideme{
+				  display:none;
+			  }
+			  
+			  .view-site-descriptions{
+				  
+				  .view-content{
+					  .views-row{
+						  border-bottom:1px solid #ccc;
+						  padding-bottom:12px;
+						  margin-bottom:12px;
+						  
+						   h2{
+					 			 margin-bottom:1.5em;
+				  			}				  
+
+						  p{
+							  margin:0 0 1em 0;
+							  line-height:1.5em;
+						  }
+					  }
+				  }			 
+			  }
     }
 
     /* Span 1 column, starting in 1st column from left. */
@@ -490,9 +526,10 @@ $zen-auto-include-item-base: false;
     /* Span 4 columns, starting in 1st column from left. */
     #content {
       @include zen-grid-item(4, 1);
-	  .hideme{
-			display:none;
-			}
+	  
+	   .hideme{
+				  display:none;
+			  }
     }
 
     /* Span 1 column, starting in 5th column from left. */
@@ -509,9 +546,9 @@ $zen-auto-include-item-base: false;
     #content {
       @include zen-grid-item(3, 2);
 	  
-	  .hideme{
-			display:none;
-			}
+	   .hideme{
+				  display:none;
+			  }
     }
 
     /* Span 1 column, starting in 1st column from left. */
