--- a/sites/all/themes/zen_PsychIntern/sass/_normalize.scss
+++ b/sites/all/themes/zen_PsychIntern/sass/_normalize.scss
@@ -257,7 +257,7 @@ h1 {
   /* Set 1 unit of vertical rhythm on the top and bottom margins. */
   @include leader(1, $h1-font-size);
   @include trailer(1, $h1-font-size);
-    color:#16608F;
+    color:#a2665c;
 }
 h2 {
   @include adjust-font-size-to( $h2-font-size );
@@ -306,7 +306,7 @@ dfn {
 hr {
   @include box-sizing(content-box);
   height: 0;
-  border: 1px solid #666;
+  border: .5px solid #ccc;
   padding-bottom: -1px;
   margin: rhythm(1) 0;
 }
