--- a/sites/all/themes/zen_PsychIntern/css/styles.css
+++ b/sites/all/themes/zen_PsychIntern/css/styles.css
@@ -1164,27 +1164,42 @@ table {
   .sidebar-first .region-sidebar-first .block {
     padding-right: 12px;
   }
+  /* line 522, ../sass/layouts/_responsive.scss */
+  .sidebar-first .view-consortium-faculty .views-row {
+    overflow: hidden;
+    padding-bottom: 12px;
+    border-bottom: 1px solid #ccc;
+  }
+  /* line 526, ../sass/layouts/_responsive.scss */
+  .sidebar-first .view-consortium-faculty .views-row .views-field-field-faculty-portrait .field-content {
+    float: left;
+    margin-right: 16px;
+  }
+  /* line 530, ../sass/layouts/_responsive.scss */
+  .sidebar-first .view-consortium-faculty .views-row:last-child {
+    border-bottom: none;
+  }
 
   /**
    * The layout when there is only one sidebar, the right one.
    */
-  /* line 525, ../sass/layouts/_responsive.scss */
+  /* line 541, ../sass/layouts/_responsive.scss */
   .sidebar-second {
     /* Span 4 columns, starting in 1st column from left. */
     /* Span 1 column, starting in 5th column from left. */
   }
-  /* line 527, ../sass/layouts/_responsive.scss */
+  /* line 543, ../sass/layouts/_responsive.scss */
   .sidebar-second #content {
     float: left;
     width: 80%;
     margin-left: 0%;
     margin-right: -80%;
   }
-  /* line 530, ../sass/layouts/_responsive.scss */
+  /* line 546, ../sass/layouts/_responsive.scss */
   .sidebar-second #content .hideme {
     display: none;
   }
-  /* line 536, ../sass/layouts/_responsive.scss */
+  /* line 552, ../sass/layouts/_responsive.scss */
   .sidebar-second .region-sidebar-second {
     float: left;
     width: 20%;
@@ -1195,31 +1210,31 @@ table {
   /**
    * The layout when there are two sidebars.
    */
-  /* line 544, ../sass/layouts/_responsive.scss */
+  /* line 560, ../sass/layouts/_responsive.scss */
   .two-sidebars {
     /* Span 3 columns, starting in 2nd column from left. */
     /* Span 1 column, starting in 1st column from left. */
     /* Span 1 column, starting in 5th column from left. */
   }
-  /* line 546, ../sass/layouts/_responsive.scss */
+  /* line 562, ../sass/layouts/_responsive.scss */
   .two-sidebars #content {
     float: left;
     width: 60%;
     margin-left: 20%;
     margin-right: -80%;
   }
-  /* line 549, ../sass/layouts/_responsive.scss */
+  /* line 565, ../sass/layouts/_responsive.scss */
   .two-sidebars #content .hideme {
     display: none;
   }
-  /* line 555, ../sass/layouts/_responsive.scss */
+  /* line 571, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-first {
     float: left;
     width: 20%;
     margin-left: 0%;
     margin-right: -20%;
   }
-  /* line 560, ../sass/layouts/_responsive.scss */
+  /* line 576, ../sass/layouts/_responsive.scss */
   .two-sidebars .region-sidebar-second {
     float: left;
     width: 20%;
