--- a/sites/all/themes/zen_PsychIntern/sass/layouts/_responsive.scss
+++ b/sites/all/themes/zen_PsychIntern/sass/layouts/_responsive.scss
@@ -405,7 +405,7 @@ $zen-auto-include-item-base: false;
 
 #page{
 	#header{
-		background:url(../images/CO-PIC-banner.png) 0 0 no-repeat;
+		/*background:url(../images/CO-PIC-banner.png) 0 0 no-repeat;*/
 		height:192px;
 		position:relative;
 		
