update phone menu

--- a/sites/all/themes/zen_PsychIntern/sass/layouts/_responsive.scss
+++ b/sites/all/themes/zen_PsychIntern/sass/layouts/_responsive.scss
@@ -145,7 +145,7 @@ $zen-auto-include-item-base: false;
 		}//end header
 		
 		
-			/*mobile nav for phones*/
+				/*mobile nav for phones*/
 			#phone-nav{
 				background:#16608f;
 					.nav-toggle{
@@ -155,7 +155,7 @@ $zen-auto-include-item-base: false;
 				.region-phone{
 					#block-menu-menu-phone-menu{
 						.menu{
-							li{
+							li, li.expanded{
 								border-bottom:1px solid #fff;
 								a:link, a:visited, a:active{
 									display:block;
@@ -165,11 +165,22 @@ $zen-auto-include-item-base: false;
 									font-size:1.3em;
 									background:#103b57;
 									line-height:1.8em;
-								}
+									}
+									
+									/*drop down from expanded list item*/
+								ul.menu{
+									li{
+											a:link, a:visited, a:active{
+												background:#164665;
+												font-size:1.1em;
+												padding-left:20px;
+											}
+										}
+									}
 								
+
 								li:last-child{
 									border-bottom:none;
-									padding-bottom:6px;
 								}
 							}
 						}
